--- a/hexagonal-adapter-console/pom.xml
+++ b/hexagonal-adapter-console/pom.xml
@@ -6,14 +6,19 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>hexagonal-example</artifactId>
     <groupId>hexagonal</groupId>
+    <artifactId>hexagonal-example</artifactId>
     <version>0.1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>hexagonal-adapter-console</artifactId>
 
   <dependencies>
+    <dependency>
+      <groupId>hexagonal</groupId>
+      <artifactId>hexagonal-application</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -29,6 +34,30 @@
 
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>hexagonal.adapter.in.console.Main</mainClass>
+            </manifest>
+          </archive>
+          <finalName>${project.build.finalName}</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
