--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.11.0</version>
+        <version>5.11.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -54,6 +54,10 @@
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
+          <version>3.4.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
           <version>3.4.2</version>
         </plugin>
         <plugin>
